--- a/web/src/main/webapp/components/commonDirectives/rhsPatientIntygFrame/rhsPatientIntygFrame.directive.scss
+++ b/web/src/main/webapp/components/commonDirectives/rhsPatientIntygFrame/rhsPatientIntygFrame.directive.scss
@@ -11,18 +11,13 @@ rhs-patient-intyg-frame {
     width: 100%;
     height: 100%;
     border: none;
+
+    min-height: 195px;
+
     // Note: These heights should mirror max-heights in patientHistory.scss mediaquery
+
     @media (min-height: 400px) {
-      height: 355px;
-    }
-    @media (min-height: 600px) {
-      height: 555px;
-    }
-    @media (min-height: 800px) {
-      height: 755px;
-    }
-    @media (min-height: 1000px) {
-      height: 935px;
+      min-height: calc(100vh - 165px);
     }
   }
 
